--- a/QuarentenaDados_Filmes.ipynb
+++ b/QuarentenaDados_Filmes.ipynb
@@ -67,23 +67,21 @@
       "metadata": {
         "id": "vC0a5z7IRFWT",
         "colab_type": "code",
-        "outputId": "b7024fec-73b5-49e6-c939-0283939c7da7",
+        "outputId": "b3cb5853-e1a8-415a-e20b-bea606a4a117",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 34
         }
       },
       "source": [
-        "print(\"Guilherme Silveira\")\n",
-        "print(\"Paulo Silveira\")"
+        "print(\"Fellipe Marcondes\")"
       ],
-      "execution_count": 60,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Guilherme Silveira\n",
-            "Paulo Silveira\n"
+            "Fellipe Marcondes\n"
           ],
           "name": "stdout"
         }
